--- a/testResults/plot/data.tex
+++ b/testResults/plot/data.tex
@@ -38,47 +38,27 @@
 
 
 
-% IMPORT-DATA stats time.txt-2019-05-01-22-44-54
+% IMPORT-DATA stats time-2019-05-23-07-35-13.txt
 
 \begin{center}
 \begin{tikzpicture}
   \begin{axis}[
-    title={Time for 10.000.000 LCE-Queries},
+    title={Time for 10.000 LCE-Queries},
     xlabel={Average lce[$\log_2$(lce)]},
-    ylabel={Run Time [s]},
-    ]
-
-    %% MULTIPLOT(algo) SELECT LOG(2, aveLCE) AS x, time AS y, MULTIPLOT
-    %% FROM stats GROUP BY MULTIPLOT,x  ORDER BY MULTIPLOT,x
-    \addplot coordinates { (1.0,0.031718) (1.58496,0.0834501) (2.80735,0.419115) (3.90689,0.566483) (4.70044,0.412786) (5.32193,0.759189) (6.44294,0.985373) (7.45121,1.05472) (8.49586,1.42359) (9.5216,2.26951) (10.5127,4.40452) (11.5241,8.01095) (12.5085,15.435) (13.4995,30.3342) (14.4891,59.7629) (15.505,120.273) };
-    \addlegendentry{algo=naiveLCE};
-    \addplot coordinates { (1.0,0.297094) (1.58496,0.444572) (2.80735,1.47916) (3.90689,1.81489) (4.70044,1.57609) (5.32193,2.34053) (6.44294,4.04676) (7.45121,7.06974) (8.49586,13.3987) (9.5216,26.7269) (10.5127,47.5142) (11.5241,49.5999) (12.5085,51.8503) (13.4995,53.582) (14.4891,54.3478) (15.505,55.1325) };
-    \addlegendentry{algo=prezzaLCE};
-
-  \end{axis}
-\end{tikzpicture}
-\end{center}
-
-\begin{center}
-\begin{tikzpicture}
-  \begin{axis}[
-    title={Time for 10.000.000 LCE-Queries},
-    xlabel={Average lce},
     ylabel={Run Time [s]},
     ]
 
     %% MULTIPLOT(algo) SELECT aveLCE AS x, time AS y, MULTIPLOT
     %% FROM stats GROUP BY MULTIPLOT,x  ORDER BY MULTIPLOT,x
-    \addplot coordinates { (2,0.031718) (3,0.0834501) (7,0.419115) (15,0.566483) (26,0.412786) (40,0.759189) (87,0.985373) (175,1.05472) (361,1.42359) (735,2.26951) (1461,4.40452) (2945,8.01095) (5827,15.435) (11581,30.3342) (22996,59.7629) (46502,120.273) };
+    \addplot coordinates { (0,0.00109601) (1,0.00160503) (2,0.00244594) (6,0.0114272) (14,0.016017) (26,0.0099299) (39,0.0106881) (86,0.0143781) (174,0.017118) (360,0.0141189) (734,0.0189419) (1461,0.0297272) (2945,0.0518909) (5827,0.0952921) (11581,0.181973) (22996,0.354093) (46502,0.708684) (92591,1.40452) (195505,2.96314) (392544,5.98153) (957456,14.5695) };
     \addlegendentry{algo=naiveLCE};
-    \addplot coordinates { (2,0.297094) (3,0.444572) (7,1.47916) (15,1.81489) (26,1.57609) (40,2.34053) (87,4.04676) (175,7.06974) (361,13.3987) (735,26.7269) (1461,47.5142) (2945,49.5999) (5827,51.8503) (11581,53.582) (22996,54.3478) (46502,55.1325) };
-    \addlegendentry{algo=prezzaLCE};
+    \addplot coordinates { (0,0.00536299) (1,0.00742507) (2,0.011167) (6,0.0246069) (14,0.039881) (26,0.0578279) (39,0.0816269) (86,0.165323) (174,0.313554) (360,0.610948) (734,1.21615) (1461,1.72467) (2945,1.78441) (5827,1.82072) (11581,1.87453) (22996,1.92896) (46502,1.88326) (92591,1.95319) (195505,1.8221) (392544,1.8817) (957456,1.91089) };
+    \addlegendentry{algo=prezza};
+    \addplot coordinates { (0,0.010006) (2,0.011699) (6,0.0194781) (14,0.025614) (26,0.029953) (39,0.0399611) (86,0.0675271) (174,0.116371) (360,0.221709) (734,0.438456) (1461,0.773158) (2945,0.806381) (5827,0.839245) (11581,0.871551) (22996,0.906404) (46502,0.935716) (92591,0.964457) (195505,1.00179) (392544,1.03239) (957456,1.08804) };
+    \addlegendentry{algo=prezzaBlock};
 
   \end{axis}
 \end{tikzpicture}
 \end{center}
-
-
-
 
 \end{document}
