Add Patrick to list of authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 Alexander Herlez <alexander.herlez@tu-dortmund.de>
 Florian Kurpicz <florian.kurpicz@tu-dortmund.de>
+Patrick Dinklage <patrick.dinklage@tu-dortmund.de>
